fix(style): brands strip overflows in mobile

--- a/src/views/home/home.scss
+++ b/src/views/home/home.scss
@@ -87,7 +87,7 @@ $categories: (
     text-align: center;
     background-color: $primary-color;
     margin-left: -20px;
-    width: calc(100% + 55px);
+    width: calc(100% + 40px);
     padding-top: .5rem;
     padding-bottom: .5rem;
     margin-top: 1rem;
